{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 37,
  "lineage": "2f6aacc2-43c8-ff0e-7f03-244258b5ea13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fd1c1c62da52235",
            "association_id": "eipassoc-06990a38ff563438b",
            "domain": "vpc",
            "id": "eipalloc-02fd1c1c62da52235",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09d6b2fa94113e362",
            "private_dns": "ip-10-1-0-253.ap-south-1.compute.internal",
            "private_ip": "10.1.0.253",
            "public_dns": "ec2-13-232-38-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.38.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:internet-gateway/igw-0a5d556181c5c7070",
            "id": "igw-0a5d556181c5c7070",
            "owner_id": "950042402016",
            "tags": {
              "Name": "igw.tf"
            },
            "tags_all": {
              "Name": "igw.tf"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fd1c1c62da52235",
            "connectivity_type": "public",
            "id": "nat-06439e054af952649",
            "network_interface_id": "eni-09d6b2fa94113e362",
            "private_ip": "10.1.0.253",
            "public_ip": "13.232.38.14",
            "subnet_id": "subnet-06e8c4f8a37149695",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.indu",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:route-table/rtb-0cc9f082a0bfa92eb",
            "id": "rtb-0cc9f082a0bfa92eb",
            "owner_id": "950042402016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_private"
            },
            "tags_all": {
              "Name": "route_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:route-table/rtb-094483cb736f57e9a",
            "id": "rtb-094483cb736f57e9a",
            "owner_id": "950042402016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_public"
            },
            "tags_all": {
              "Name": "route_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7f0c94ea507e441",
            "route_table_id": "rtb-094483cb736f57e9a",
            "subnet_id": "subnet-06e8c4f8a37149695"
          },
          "dependencies": [
            "aws_route_table.route_public",
            "aws_subnet.indu",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4b20c050669e390",
            "route_table_id": "rtb-094483cb736f57e9a",
            "subnet_id": "subnet-0cd6ea0bb6f79f7c8"
          },
          "dependencies": [
            "aws_route_table.route_public",
            "aws_subnet.indu",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59887fd54112f63",
            "route_table_id": "rtb-094483cb736f57e9a",
            "subnet_id": "subnet-061ffef67485504e1"
          },
          "dependencies": [
            "aws_route_table.route_public",
            "aws_subnet.indu",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:security-group/sg-0c92fbd48415661c8",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c92fbd48415661c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.88.236.202/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "950042402016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-00aa2e32c782d62c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aa2e32c782d62c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-data"
            },
            "tags_all": {
              "Name": "subnet-1-data"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-043ff3cfc28b7a373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043ff3cfc28b7a373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-data"
            },
            "tags_all": {
              "Name": "subnet-2-data"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-09e2dcb8a605c7e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e2dcb8a605c7e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-3-data"
            },
            "tags_all": {
              "Name": "subnet-3-data"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "indu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-06e8c4f8a37149695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e8c4f8a37149695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-public"
            },
            "tags_all": {
              "Name": "subnet-1-public"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-0cd6ea0bb6f79f7c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd6ea0bb6f79f7c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-public"
            },
            "tags_all": {
              "Name": "subnet-2-public"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-061ffef67485504e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061ffef67485504e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-3-public"
            },
            "tags_all": {
              "Name": "subnet-3-public"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-09b2fa67c54f23b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b2fa67c54f23b41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-private"
            },
            "tags_all": {
              "Name": "subnet-1-private"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-00a322b58b25ea2a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a322b58b25ea2a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-private"
            },
            "tags_all": {
              "Name": "subnet-2-private"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:subnet/subnet-07fc93e29372916b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fc93e29372916b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950042402016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-3-private"
            },
            "tags_all": {
              "Name": "subnet-3-private"
            },
            "vpc_id": "vpc-03133fe76de1f3588"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950042402016:vpc/vpc-03133fe76de1f3588",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a9714d85bd487329",
            "default_route_table_id": "rtb-015438d7e9ad9491b",
            "default_security_group_id": "sg-022605d6655a40d40",
            "dhcp_options_id": "dopt-0c9e0be251d5de352",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03133fe76de1f3588",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015438d7e9ad9491b",
            "owner_id": "950042402016",
            "tags": {
              "Name": "vpc-sharmi"
            },
            "tags_all": {
              "Name": "vpc-sharmi"
            }
          }
        }
      ]
    }
  ]
}